# OpenMMO

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  PLAYER_FSM_REFACTOR_PLAN.md  PR0-fishing-proposal.md  README.md  WORLD_BUILDING.md
.cargo/: config.toml
.claude/: settings.local.json
agent-client/: Cargo.toml
assets/: all_animation.blend  scroll.blend
client/: .env.example  MEMO.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
data/: convert.mjs  items.csv  (+3 more)
data-src/: behavior_trees.json  dungeons.csv  items.csv  merchants.csv  monsters.csv  world_drop.csv
shared/: Cargo.toml
shared/src/: entity.rs  fishing.rs  housing.rs  inventory.rs  lib.rs  messages.rs  monster_ai.rs  skills.rs  wasm_api.rs  world.rs  xp.rs
shared/src/dungeon/: doors.rs  gen.rs  mod.rs  tests.rs
shared/src/monster_ai/: behavior.rs  brain.rs  command.rs  tests.rs
shared/src/pathfinding/: astar.rs  cache.rs  mod.rs  query.rs  smooth.rs  stair.rs
shared/src/worldgen/: config.rs  continent.rs  elevation.rs  erosion.rs  global_map.rs  grid.rs  growth.rs  mod.rs  noise.rs  rivers.rs  roads.rs  settlements.rs  tile_bake.rs  vector_features.rs  vegetation.rs
shared/src/worldgen/roads/: astar.rs  merge.rs  snap.rs
shared/src/worldgen/tile_bake/: bridges.rs  constants.rs  context.rs  heightmap.rs  mod.rs  rivers_bin.rs  splatmap.rs  water_field.rs
tools/terrain-gen/: Cargo.toml
tools/terrain-gen/src/: bake.rs  main.rs  preview.rs
tools/terrain-gen/src/preview/: features.rs  mod.rs  text.rs
(+417 files in other folders)
