[package]
name = "terrain-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "terrain-gen"
path = "src/main.rs"

[dependencies]
onlinerpg-shared = { path = "../../shared" }
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
